# raytracer

./: Cargo.toml  README.md  image.ppm
benches/: bench.rs
src/: aabb.rs  aarect.rs  bvh.rs  camera.rs  hittable.rs  lib.rs  material.rs  medium.rs  moving_sphere.rs  perlin.rs  ray.rs  scenes.rs  sphere.rs  texture.rs  transform.rs  vec3.rs
