[package]
name = "raytracer"
version = "0.1.0"
authors = ["Raj Mehta <rcmehta@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
rand = "0.7.3"
rand_distr = "0.3.0"
rayon = "1.5.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false